--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -9,22 +9,23 @@
 .login-form{width:100%;margin:20px auto 0;}
 .form .form-input{margin-bottom:15px;}
 .form .form-input label input{width:100%;padding:10px 0px;border:none;border-bottom:1px solid rgb(0, 0, 0,.4);font-family:inherit;transition:all .5s ease-in-out;}
-.form .form-input label input:focus{border-color:#030406;}
-.form .form-input:nth-child(3){margin-bottom:40px;}
-.form .form-input:nth-child(3) :is(label, input){position:relative;}
-.form .form-input:nth-child(3) label span{position:absolute;z-index:1;top:0;right:0px;}
-.form .form-input:nth-child(3) label span i{color:rgb(0, 0, 0,.4);}
+.form .form-input:nth-child(2){margin-bottom:40px;}
+.form .form-input:nth-child(2) :is(label, input){position:relative;}
+.form .form-input:nth-child(2) label span{position:absolute;z-index:1;top:0;right:0px;}
+.form .form-input:nth-child(2) label span i{color:rgb(0, 0, 0,.4);}
 .submit-btn{display:flex;gap:0 20px;}
 .submit-btn button:nth-child(2){background-color:transparent;text-align:end;color:#EA4335;}
-.form :is(.form-input:nth-child(4) .submit-btn button:nth-child(1)){background-color:#EA4335;}
-.form :is(.form-input:nth-child(4) .submit-btn button,.form-input:nth-child(5) .submit-btn button){width:100%;padding:13px 0;border:none;border-radius:4px;transition:all .3s ease-in-out;}
+.form :is(.form-input:nth-child(3) .submit-btn button:nth-child(1)){background-color:#EA4335;}
+.form :is(.form-input:nth-child(3) .submit-btn button,.form-input:nth-child(5) .submit-btn button){width:100%;padding:13px 0;border:none;border-radius:4px;transition:all .3s ease-in-out;}
 .submit-btn button{color:#fff;font-family:inherit;font-weight:500;}
-.form .form-input:nth-child(5) .submit-btn button{border:1px solid rgb(0, 0, 0,.4);background-color:transparent;color:#030406;}
+.form .form-input:nth-child(4) .submit-btn button{border:1px solid rgb(0, 0, 0,.4);background-color:transparent;color:#030406;}
 .login{text-align:center;}
 .login p{font-size:.8rem;}
 .login-link{text-decoration:underline;}
 .login-head span, .login-link a{color:#030406;}
 .login-link a{text-decoration:underline #030406;}
+.form .form-input label input.ng-invalid.ng-touched{border-bottom-color:#dc3545;}
+.error{color:#dc3545;font-size:.8rem;margin:-3px 0 0;}
 
 
 @media screen and (max-width:768px) {
