--- a/src/app/cart/checkout/checkout.component.html
+++ b/src/app/cart/checkout/checkout.component.html
@@ -8,40 +8,49 @@
         </div>
         <div class="form-checkout-div">
             <div class="form-container">
-                <div class="form-checkout-flex formGroup">
+                <form (ngSubmit)="placeOrder(form)" #form="ngForm" class="form-checkout-flex formGroup">
                     <div class="checkout-form-container">
                         <div class="form">
                             <div class="fname input-text">
                                 <label for="fname">First Name</label>
-                                <input type="text" id="fname">
+                                <input type="text" id="fname" name="fname" ngModel #fname="ngModel" required>
+                                <span *ngIf="fname.invalid && fname.touched" class="required-error">This field is required</span>
                             </div>
                             <div class="company-name input-text">
                                 <label for="company-name">Company Name</label>
-                                <input type="text" id="company-name">
+                                <input type="text" id="company-name" name="company" ngModel #company="ngModel" required>
+                                <span *ngIf="company.invalid && company.touched" class="required-error">This field is required</span>
                             </div>
                             <div class="address input-text">
                                 <label for="address">Street Address</label>
-                                <input type="text" id="address">
+                                <input type="text" id="address" name="address" ngModel #address="ngModel" required>
+                                <span *ngIf="address.invalid && address.touched" class="required-error">This field is required</span>
                             </div>
                             <div class="apartment input-text">
                                 <label for="apartment">Apartment, floor, etc. (optional)</label>
-                                <input type="text" id="apartment">
+                                <input type="text" id="apartment" name="apartment" ngModel #apartment="ngModel" required>
+                                <span *ngIf="apartment.invalid && apartment.touched" class="required-error">This field is required</span>
                             </div>
                             <div class="town input-text">
                                 <label for="town">Town/City</label>
-                                <input type="text" id="town">
+                                <input type="text" id="town" name="town" ngModel #town="ngModel" required>
+                                <span *ngIf="town.invalid && town.touched" class="required-error">This field is required</span>
                             </div>
                             <div class="phone input-text">
                                 <label for="phone">Phone Number</label>
-                                <input type="text" id="phone">
+                                <input type="text" id="phone" name="phone" ngModel #phone="ngModel" required>
+                                <span *ngIf="phone.invalid && phone.touched" class="required-error">This field is required</span>
                             </div>
                             <div class="email input-text">
                                 <label for="email">Email Address</label>
-                                <input type="email" id="email">
+                                <input type="email" id="email" name="email" ngModel #email="ngModel" required email>
+                                <span *ngIf="email.invalid && email.touched" class="required-error">Invalid email</span>
                             </div>
                             <div class="save-checkbox">
-                                <input type="checkbox" name="saveCheckout" id="checkbox">
-                                <label for="checkbox">Save this information for faster check-out next time</label>
+                                <label for="checkbox">
+                                    <input type="checkbox" name="saveCheckout" id="checkbox">
+                                    <span>Save this information for faster check-out next time</span>
+                                </label>
                             </div>
                         </div>
                     </div>
@@ -53,7 +62,10 @@
                                 </div>
                                 <div class="product-description">
                                     <p class="product-name">{{product.name}}</p>
-                                    <p class="product-price">&#x20A6;{{product.price}}</p>
+                                    <div class="product-price-div-card">
+                                        <p class="product-price">&#8358;{{product.price * product.quantity}}</p>
+                                        <span>{{product.price}} &times; {{product.quantity}}</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -74,23 +86,27 @@
                         <div class="bank-delivery-container">
                             <div class="bank bank-delivery">
                                 <div class="bank-radio">
-                                    <input type="radio" name="payment" id="bank" checked>
-                                    <label for="bank">Bank</label>
+                                    <label for="bank">
+                                        <input type="radio" name="payment" id="bank" checked>
+                                        <span>Bank</span>
+                                    </label>
                                 </div>
                                 <div class="bank-image">
                                     <img src="assets/images/bank.svg" alt="bank">
                                 </div>
                             </div>
                             <div class="delivery bank-delivery">
-                                <input type="radio" name="payment" id="delivery">
-                                <label for="delivery">Delivery</label>
+                                <label for="delivery">
+                                    <input type="radio" name="payment" id="delivery">
+                                    <span>Cash on delivery</span>
+                                </label>
                             </div>
                         </div>
                         <div class="place-order-btn">
-                            <button type="submit">Place Order</button>
+                            <button (click)="form.valid" type="submit">Place Order</button>
                         </div>
                     </div>
-                </div>
+                </form>
             </div>
         </div>
     </div>
