--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -28,14 +28,24 @@
 .menu-search input, .menu-search{position:relative;display:flex;align-items:center;}
 .menu-search button{background-color:transparent;border:none;position:absolute;right:0;}
 .menu-search button i{font-size:1rem;color:#000;}
-.menu-icon-header ul{display:flex;align-items:center;gap:0 30px;}
-.menu-icon-header ul li{list-style:none;}
-.menu-icon-header ul li button i{font-size:2rem;color:#000;transition:all .5s ease-in-out;}
-.menu-icon-header ul li button span{position:absolute;width:20px;height:20px;display:flex;align-items:center;justify-content:center;background-color:#FB1314;}
-.menu-icon-header ul li button span{font-family:'Inter';font-weight:600;border-radius:50%;right:100%;left:50%;top:0;}
-.menu-icon-header ul li button{background-color:transparent;border:transparent;transition:all .5s ease-in-out;width:40px;height:40px;position:relative;}
+.menu-icon-header .rel-icon-ul{display:flex;align-items:center;gap:0 30px;}
+.menu-icon-header .rel-icon-ul li{list-style:none;}
+.menu-icon-header .rel-icon-ul li .icon-i-btn i{font-size:2rem;color:#000;transition:all .5s ease-in-out;}
+.menu-icon-header .rel-icon-ul li .icon-i-btn .number-icon{position:absolute;width:20px;height:20px;display:flex;align-items:center;justify-content:center;background-color:#FB1314;}
+.menu-icon-header .rel-icon-ul li .icon-i-btn .number-icon{font-family:'Inter';font-weight:600;border-radius:50%;right:100%;left:50%;top:0;}
+.menu-icon-header .rel-icon-ul li .icon-i-btn{background-color:transparent;border:transparent;transition:all .5s ease-in-out;width:40px;height:40px;position:relative;}
 .menu-headers{display:flex;align-items:center;gap:0 100px;}
 .menu-logo button{display:none;}
+.profile-dropdown-container{position:relative;}
+.profile-dropdown-div{position:absolute;left:-270px;right:0;padding:20px 15px;background-color:rgba(0,0,0,.5);border-radius:5px;min-width:300px;z-index:1;}
+.profile-ul ul{display:flex;flex-direction:column;gap:15px 0;}
+.profile-ul ul li{list-style:none;}
+.pro-click{display:flex;align-items:center;gap:0 15px;background-color:transparent;border:none;width:100%;font-family:inherit;width:100%;}
+.pro-click :is(span,i){color:#fff;}
+.pro-click i{font-size:1.5rem;}
+.pro-click span{font-size:.9rem;font-weight:400;font-family:inherit;}
+
+
 
 @media screen and (min-width:1024px) {
     .menu-headers{gap:0 200px;}
