--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -44,24 +44,60 @@
             </div>
           </div>
           <div class="menu-icon-header">
-            <ul>
+            <ul class="rel-icon-ul">
               <li>
-                <button [routerLink]="'wishlist'" (click)="removeMenu()">
-                  <span *ngIf="wishListNumber > 0">{{wishListNumber}}</span>
+                <button class="icon-i-btn" [routerLink]="'wishlist'" (click)="removeMenu()">
+                  <span class="number-icon" *ngIf="wishListNumber > 0">{{wishListNumber}}</span>
                   <i class="fa-regular fa-heart" [ngClass]="wishListNumber > 0 ? 'fa-solid fa-heart' : 'fa-regular fa-heart'"></i>
                 </button>
               </li>
               <li>
-                <button [routerLink]="'cart'" (click)="removeMenu()">
-                  <span  *ngIf="cartNumber > 0">{{cartNumber}}</span>
+                <button class="icon-i-btn" [routerLink]="'cart'" (click)="removeMenu()">
+                  <span class="number-icon"  *ngIf="cartNumber > 0">{{cartNumber}}</span>
                   <i class="fa-solid fa-cart-shopping"></i>
                 </button>
               </li>
-              <li *ngIf="displayAccount">
-                <button [routerLink]="'home'">
+              <li *ngIf="displayAccount" class="profile-dropdown-container">
+                <button class="icon-i-btn" [routerLink]="'home'" (click)="displayProlifeDropdown()">
                   <!-- <span  *ngIf="cartNumber > 0">{{cartNumber}}</span> -->
                   <i class="fa-solid fa-user"></i>
                 </button>
+                <div class="profile-dropdown-div" *ngIf="showProfile">
+                  <div class="profile-ul">
+                    <ul>
+                      <li>
+                        <button class="drop-profile pro-click">
+                          <i class="fa-solid fa-user"></i>
+                          <span>Manage My Account</span>
+                        </button>
+                      </li>
+                      <li>
+                        <button class="drop-profile pro-click">
+                          <i class="fa-solid fa-bag-shopping"></i>
+                          <span>My Order</span>
+                        </button>
+                      </li>
+                      <li>
+                        <button class="drop-profile pro-click">
+                          <i class="fa-solid fa-ban"></i>
+                          <span>My Cancellations</span>
+                        </button>
+                      </li>
+                      <li>
+                        <button class="drop-profile pro-click">
+                          <i class="fa-regular fa-star"></i>
+                          <span>My Reviews</span>
+                        </button>
+                      </li>
+                      <li>
+                        <button class="drop-profile pro-click">
+                          <i class="fa-solid fa-right-from-bracket"></i>
+                          <span>Logout</span>
+                        </button>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
               </li>
             </ul>
           </div>
