updated profile dropdown button

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -58,7 +58,7 @@
                 </button>
               </li>
               <li *ngIf="displayAccount" class="profile-dropdown-container">
-                <button class="icon-i-btn" [routerLink]="'home'" (click)="displayProlifeDropdown()">
+                <button class="icon-i-btn" (click)="displayProlifeDropdown()">
                   <!-- <span  *ngIf="cartNumber > 0">{{cartNumber}}</span> -->
                   <i class="fa-solid fa-user"></i>
                 </button>
