--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -24,7 +24,7 @@
       <div class="menu-card">
         <div class="menu-logo">
           <button (click)="toggleMenu()"><i class="fa-solid fa-bars"></i></button>
-          <a [routerLink]="''">aboMart</a>
+          <a [routerLink]="''" (click)="hideNavBar()">aboMart</a>
         </div>
         <div class="menu-headers">
           <div class="menu-category" #removeNavBar [ngClass]="hideMenu ? 'absolute' : ''">
