--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,20 +13,20 @@
             <div class="login-form">
                 <form (ngSubmit)="loginAccount(form)" #form="ngForm" class="form">
                     <div class="form-input">
-                        <label for="email">
+                        <label for="phonenumber">
                             <input
-                            id="email"
+                            id="phonenumber"
                             autocomplete="off" 
-                            type="text" 
-                            placeholder="Email or Phone Number" 
-                            name="email"
+                            type="number" 
+                            placeholder="Phone No" 
+                            name="phonenumber"
                             required
-                            email
-                            #email="ngModel"
+                            phonenumber
+                            #phonenumber="ngModel"
                             ngModel
-                            [ngStyle]="{borderBottomColor: email.valid ? '#28a745' : ''}">
+                            [ngStyle]="{borderBottomColor: phonenumber.valid ? '#28a745' : ''}">
                         </label>
-                        <span *ngIf="!email.valid && email.touched" class="error">Incorrect email</span>
+                        <span *ngIf="!phonenumber.valid && phonenumber.touched" class="error">Incorrect email</span>
                     </div>
                     <div class="form-input">
                         <label for="password">
